src/objects/Amr_Project_Details__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Name__c</fullName>
        <label>Execution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Activity__c</fullName>
        <label>Project Activity</label>
        <picklist>
            <picklistValues>
                <fullName>PA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_description__c</fullName>
        <label>Project description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_location__c</fullName>
        <label>Project location</label>
        <picklist>
            <picklistValues>
                <fullName>PL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_name__c</fullName>
        <label>Project name</label>
        <picklist>
            <picklistValues>
                <fullName>PN1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Air_Date__c</fullName>
        <label>Target Air Date</label>
        <type>Date</type>
    </fields>
    <label>Amr Project Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amr Project Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>